WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
150086
[GTK] Fix build for ENABLE_PLUGIN_PROCESS_GTK2=OFF
https://bugs.webkit.org/show_bug.cgi?id=150086
Summary
[GTK] Fix build for ENABLE_PLUGIN_PROCESS_GTK2=OFF
Sergio Villar Senin
Reported
2015-10-13 05:02:45 PDT
[GTK] Fix build for ENABLE_PLUGIN_PROCESS_GTK2=OFF
Attachments
Patch
(1.72 KB, patch)
2015-10-13 05:03 PDT
,
Sergio Villar Senin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2015-10-13 05:03:37 PDT
Created
attachment 262983
[details]
Patch
WebKit Commit Bot
Comment 2
2015-10-20 03:41:35 PDT
Comment on
attachment 262983
[details]
Patch Clearing flags on attachment: 262983 Committed
r191338
: <
http://trac.webkit.org/changeset/191338
>
WebKit Commit Bot
Comment 3
2015-10-20 03:41:38 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug