[GTK] Fix build for ENABLE_PLUGIN_PROCESS_GTK2=OFF https://bugs.webkit.org/show_bug.cgi?id=150086

Reviewed by Darin Adler.

* UIProcess/cairo/BackingStoreCairo.cpp:
(WebKit::BackingStore::createBackend):


Canonical link: https://commits.webkit.org/168505@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@191338 268f45cc-cd09-0410-ab3c-d52691b4dbfc